fix accessibility on detail page, fix review-container overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -514,7 +514,7 @@ nav {
 
 .review-container {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
   grid-gap: var(--mainSpacing);
   margin-bottom: 32px;
 }
@@ -527,22 +527,40 @@ nav {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   padding: 25px 30px;
   text-align: center;
+  overflow-x: auto;
+}
+
+.review-item::-webkit-scrollbar {
+  height: 5px;
+  width: 8px;
+}
+
+.review-item::-webkit-scrollbar-track {
+  background-color: var(--grayLight);
+  border-radius: 4px;
+}
+
+.review-item::-webkit-scrollbar-thumb {
+  background-color: var(--primaryColorLight);
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .review-person-name {
   font-family: 'Nanum Gothic', sans-serif;
-  font-size: 18px;
+  font-size: var(--mainSize);
   font-weight: 800;
   margin-bottom: 10px;
 }
 
 .review-person-message {
-  font-size: var(--mainSize);
+  font-size: 14px;
   font-weight: 400;
   margin-bottom: var(--mainSpacing);
 }
 
 .review-date {
+  font-size: 14px;
   font-weight: 300;
 }
 
